2009-02-17  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java:
	Fixed authorization exceptions and NPEs for unconfigured pages

2009-02-16  Martin Leidig  <mleidig@schlund.de>

	* build-maven.xml: added support for deployment via WebDAV and use it
	as default, added support for deploying releases and snapshots to
	different locations (can be set using the build.properties
	remote.repository.url.releases and remote.repository.url.snapshots)

2009-02-13  Martin Leidig  <mleidig@schlund.de>

	* projects/core/build/iwrapper.xsl: removed @SuppressWarnings at local
	variable definitions and only create definition if variable is used
	later (checked by XPath expression). Thus we get rid of the
	'Unnecessary @SuppressWarnings("unused")' warnings in the IDE.

2009-02-09  Martin Leidig  <mleidig@schlund.de>

	Added $__contextpath to deref URLs
	* projects/core/xsl/master.xsl
	* projects/core/xsl/forminput.xsl

2009-02-06  Martin Leidig  <mleidig@schlund.de>

	Added classversioncheck target, which checks if classes in the build
	folder and from jar files in the lib folder are compatible to the
	version specified as javac.target property. The check is only
	automatically executed as dependency of the jar target.

	Added:
	* src/org/pustefixframework/tools/ClassVersionChecker.java
	* src/org/pustefixframework/tools/ClassVersionCheckerTask.java
	
	Modified:
	* build.xml
	* skel/build-skel.xml

2009-02-05  Martin Leidig  <mleidig@schlund.de>

	Added javac.target property to set java class file target version. Set
	it by default to 1.5 and use it in all javac tasks.
	This finally solves our problems with building releases with classes
	having the wrong class version (because -source 1.5 in ant isn't the
	same as with javac on the commandline, where -source 1.5 without
	setting target results in 1.5, whereas in ant the version of the JVM,
	which is running ant, is used.

	* build.xml
	* skel/build-skel.xml
