@@ -328,6 +328,10 @@ public class RequestContextImpl implements Cloneable, AuthorizationInterceptor {
             if (rp != null) {
                 redirectURL += "&__frame=" + rp.getValue();
             }
+            rp = preq.getRequestParam("__lf");
+            if (rp != null) {
+            	redirectURL += "&__lf=" + rp.getValue();
+            }
             spdoc.setRedirect(redirectURL);
 
         }
