@@ -1,3 +1,14 @@
+2009-02-20  Martin Leidig  <mleidig@schlund.de>
+
+	Fixed browser reload problem: reloading a page used in multiple flows
+	could cause the selection of the wrong pageflow if the URL doesn't
+	contain a __lf parameter indicating the right flow. URLs don't contain
+	the __lf parameter if they're created by a redirect (for forcing SSL
+	or getting the page name into the URL). Fixed the problem by adding
+	the __lf parameter from the originating URL to the redirection URL.
+	* src/org/pustefixframework/http/PustefixContextXMLRequestHandler.java
+	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java
+
 2009-02-17  Martin Leidig  <mleidig@schlund.de>
 
 	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java:
